# unifi

./: CLAUDE.md  README.md
apps/backend/: .gitignore  README.md  pyproject.toml
apps/backend/artifacts/: feature_schema.json  label_stats.json  train_stats.json  ur5_labeled.parquet  ur5_windows.parquet  wear_rate_lgbm.txt
apps/backend/src/unifi/: __init__.py  main.py
apps/backend/src/unifi/core/: config.py
apps/backend/src/unifi/cost/: __init__.py  engine.py  schema.py
apps/backend/src/unifi/data/: ur5_loader.py  windowing.py
apps/backend/src/unifi/deal_desk/: __init__.py  agent.py  catalog.py  run.py  schema.py  tools.py  tracing.py
apps/backend/src/unifi/labels/: physics.py
apps/backend/src/unifi/models/: wear_rate.py
apps/backend/src/unifi/residual/: __init__.py  accumulator.py  engine.py  fleet.py  schema.py
apps/backend/src/unifi/scripts/: build_dataset.py  build_deal_desk_fixtures.py  e2e_deal_desk.py  make_labels.py  train_wear_rate.py
apps/backend/src/unifi/simulator/: __init__.py  sampler.py  scaling.py  shap.py
apps/backend/src/unifi/ucs/: __init__.py  normalizer.py  (+1 more)
apps/backend/tests/: test_api_cost_per_pick.py  test_api_deal_desk.py  test_api_residual.py  test_api_simulate.py  test_api_wear_rate.py  test_cost_engine.py  test_deal_desk_agent.py  test_deal_desk_tools.py  test_normalizer.py  test_physics.py  test_pricing.py  test_residual_accumulator.py  test_residual_engine.py  test_residual_fleet.py  test_simulator_sampler.py  test_simulator_scaling.py  test_ucs_schema.py  test_ur5_loader.py  test_wear_rate_model.py  test_windowing.py
(+64 files in other folders)
