[project]
name = "unifi"
version = "0.1.0"
description = "UNIFI backend — UCS schema, wear-rate model, FastAPI inference."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pandas>=2.2",
    "numpy>=2.0",
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "pyarrow>=18.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unifi"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
